# mine-together

./: Anchor.toml  README.md  package.json
programs/mine-together/: Cargo.toml
programs/mine-together/src/: lib.rs  utils.rs
tests/: mine-together.ts
tests/utils/: index.ts
